--- a/findBarcode/Web.config
+++ b/findBarcode/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="LKSDBConnectionString" connectionString="Data Source=194.62.40.24\DATA2;Initial Catalog=LKSDB;User ID=sa;Password=Seker2779." providerName="System.Data.SqlClient" />
+    <add name="LKSDBConnectionString" connectionString="" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
